# documentation-researcher

./: .env  .env.example  .gitignore  README.md  azure.yaml  build_additions_docx.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
document/: Microsoft Foundry adoption across my organization.docx  Microsoft Foundry adoption across my organization.md  Microsoft Foundry adoption across my organization_reviewed.md
document/AgentOps/: agentops.md  agentops_reviewed.md
research/: foundry-iq-hosted-agents-and-cicd.md  foundry-iq-tools-hosted-agents-and-cicd.md
src/agent_host/: agent.yaml  main.py  requirements.txt  vendor.sh
src/doc_reviewer/: __init__.py  config.py  main.py  observability.py  orchestrator.py  research_corpus.py
src/doc_reviewer/agents/: __init__.py  _deploy_common.py  base.py  deploy_all.py  engineering_customer.py  fsi_customer.py  hosted.py  manufacturing_customer.py  prompt_agent.py  registry.py  research.py  shared.py  writer.py
src/doc_reviewer/agents/engineering_customer/: README.md  __init__.py  agent.yaml  definition.py  deploy.py  factory.py  instructions.py
src/doc_reviewer/agents/fsi_customer/: README.md  __init__.py  agent.yaml  definition.py  deploy.py  factory.py  instructions.py
src/doc_reviewer/document/: __init__.py  loader.py
src/doc_reviewer/eval/: README.md  __init__.py  fsi_coverage_evaluator.py  run_foundry_eval.py  validate_dataset.py
src/doc_reviewer/host/: Dockerfile  README.md  __init__.py  client.py  main.py  observability.py  requirements.txt  server.py
(+22 files in other folders)
