[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-reviewer"
version = "0.1.0"
description = "Multi-agent documentation reviewer using Microsoft Agent Framework"
requires-python = ">=3.11"
dependencies = [
    "agent-framework>=1.8.0",
    "agent-framework-foundry>=1.8.0",
    "azure-identity>=1.17.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
doc-reviewer = "doc_reviewer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_reviewer"]
